--- a/app/src/main/res/layout/remita_activity_main.xml
+++ b/app/src/main/res/layout/remita_activity_main.xml
@@ -20,9 +20,10 @@
         android:paddingTop="25dp"
         android:paddingRight="5dp"
         android:paddingBottom="25dp"
-        android:text="Want to quickly see how to easily process an RRR?\n\nEnter or Generate an RRR below"
+        android:text="Want to quickly see how to easily process an RRR?\n\nEnter an RRR below"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textColor="@color/colorBlack" />
+<!--    android:text="Want to quickly see how to easily process an RRR?\n\nEnter or Generate an RRR below"-->
 
     <TextView
         android:id="@+id/amount"
@@ -59,6 +60,7 @@
             android:layout_height="60dp"
             android:layout_margin="@dimen/small_padding"
             android:layout_weight="1"
+            android:visibility="gone"
             android:background="@color/colorPrimary"
             android:text="GEN RRR"
             android:textColor="@color/colorWhite"
